--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -178,8 +178,8 @@
     }
     .s-content{
       width: 700px;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
       .result{
-        font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
         display: flex;
         margin: 0 0 8px;
         text-align: right;
@@ -193,6 +193,18 @@
           margin: 0 0 0 4px;
         }
       }
+      .text-result{
+        margin: 16px 0 40px;
+        font-size: 14px;
+        color: #333333;
+      }
+      .new-result{
+        font-size: 22px;
+        font-weight: 700;
+        margin: 0 0 16px;
+
+      }
+
       .number{
         margin: 16px 0;
         font-size: 14px;
