--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -86,19 +86,19 @@
         .member_main__content__single__top3__from
           .member_main__content__single__top3__from
           %label
-            = f.select :birthday_y, [["--", 0],["2019", 1],["2018", 2],["2017",3],["2016", 4],["2015", 5],["2014",6],["2013", 7],["2012", 8],["2011",9],["2010",10 ],["2009",11],["2008", 12],["2007", 13],["2006",14],["2005", 15],["2004", 16],["2003",17],["2002", 18],["2001", 19],["2000",20],["1999", 21],["1998", 22],["1997", 23],["1996", 24],["1995",25],["1994",26],["1993", 27],["1992", 28],["1991",29],["1990", 30],["1989", 31],["1988", 32],["1987", 33],["1986", 34],["1985", 35],["1984", 36],["1983", 37],["1982", 38],["1981", 39],["1980", 40],["1979", 41],["1978", 42],["1977", 43],["1976", 44],["1975", 45],["1974", 46],["1973", 47],["1972", 48],["1971", 49],["1970", 50],["1969", 51],["1968", 52],["1967", 53],["1966", 54],["1967", 55],["1966", 56],["1965", 57],["1964", 58],["1963", 59],["1962", 60],["1961", 61],["1960", 62],["1959", 63],["1958", 64],["1957", 65],["1956", 66],["1955", 67],["1954", 68],["1953", 69],["1952", 70],["1951", 71],["1950", 72]],{}, {class: 'member_main__content__single__top3__from--1'}
+            = f.select :birthday_y, [["--"],["2019"],["2018"],["2017"],["2016"],["2015"],["2014"],["2013"],["2012"],["2011"],["2010"],["2009"],["2008"],["2007"],["2006"],["2005"],["2004"],["2003"],["2002"],["2001"],["2000"],["1999"],["1998"],["1997"],["1996"],["1995"],["1994"],["1993"],["1992"],["1991"],["1990"],["1989"],["1988"],["1987"],["1986"],["1985"],["1984"],["1983"],["1982"],["1981"],["1980"],["1979"],["1978"],["1977"],["1976"],["1975"],["1974"],["1973"],["1972"],["1971"],["1970"],["1969"],["1968"],["1967"],["1966"],["1967"],["1966"],["1965"],["1964"],["1963"],["1962"],["1961"],["1960"],["1959"],["1958"],["1957"],["1956"],["1955"],["1954"],["1953"],["1952"],["1951"],["1950"]],{}, {class: 'member_main__content__single__top3__from--1'}
             = icon 'fa', 'chevron-down', class:"member_main__content__single__top3__from--down"
           %br
           .member_main__content__single__top3__from--time
             年
           %label
-            = f.select :birthday_m, [["--", 0],["1", 1],["2", 2],["3",3],["4", 4],["5", 5],["6",6],["7", 7],["8", 8],["9",9],["10",10 ],["11",11],["12", 12]],{},{class: 'member_main__content__single__top3__from--2'}
+            = f.select :birthday_m, [["--"],["1"],["2"],["3"],["4"],["5"],["6"],["7"],["8"],["9"],["10"],["11"],["12"]],{},{class: 'member_main__content__single__top3__from--2'}
             = icon 'fa', 'chevron-down', class:"member_main__content__single__top3__from--down2"
           %br
           .member_main__content__single__top3__from--time
             月
           %label
-            = f.select :birthday_d, [["--", 0],["1", 1],["2", 2],["3",3],["4", 4],["5", 5],["6",6],["7", 7],["8", 8],["9",9],["10",10 ],["11",11],["12", 12],["13", 13],["14", 14],["15",15],["16",16 ],["17",17],["18", 18],["19", 19],["20", 20],["21",21],["22",22 ],["23",23],["24", 24],["25", 25],["26", 26],["27",27],["28",28 ],["29",29],["30", 30],["31", 31]],{}, {class: 'member_main__content__single__top3__from--2'}
+            = f.select :birthday_d, [["--"],["1"],["2"],["3"],["4"],["5"],["6"],["7"],["8"],["9"],["10"],["11"],["12"],["13"],["14"],["15"],["16"],["17"],["18"],["19"],["20"],["21"],["22"],["23"],["24"],["25"],["26"],["27"],["28"],["29"],["30"],["31"]],{}, {class: 'member_main__content__single__top3__from--2'}
             = icon 'fa', 'chevron-down', class:"member_main__content__single__top3__from--down3"
           %br
           .member_main__content__single__top3__from--time
