--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -221,6 +221,11 @@
         display: flex;
         flex-wrap: wrap;
       }
+      .paginate {
+          text-align: center;
+          margin:0 auto;
+      }
+      
     }
   }
   .s-footer {
