--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,10 +1,12 @@
 .all_show
   .header
-    - if user_signed_in?
+    - if user_signed_in? && current_user.id == @product.saler_id
       = render "header"
       .u-main
         - breadcrumb :show
         = render "layouts/breadcrumbs"
+    - elsif user_signed_in?
+      = render "header"
     - else 
       = render "new_header"
     
@@ -89,6 +91,10 @@
         =@product.price
       %span.box__container__price__tax ＜税込＞
       %span.box__container__price__fee 送料込み
+    - if user_signed_in? && @product.saler_id == current_user.id
+      .box__container__explanation
+        %p.box__container__explanation__content
+          =@product.description
   - if user_signed_in? && @product.saler_id == current_user.id
     = render "show_edit_btn" # 編集・削除ボタンのビューの呼び出し
   - elsif @product.buyer_id 
