--- a/app/assets/stylesheets/category_search.scss
+++ b/app/assets/stylesheets/category_search.scss
@@ -186,10 +186,11 @@ a{
           }
         }
       }
-      &__product{
+      &__category{
         width: 1020px;
         margin: 0 auto;
         padding: 42px 0px 100px;
+        height: 3000px;
         &__box{
           &__menu{
             margin-bottom: 16px;
