--- a/app/views/products/category_search.html.haml
+++ b/app/views/products/category_search.html.haml
@@ -9,7 +9,7 @@
   .amain
     - breadcrumb :category_search
     = render "layouts/breadcrumbs"
-    .imain__main__product
+    .imain__main__category
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text 
