--- a/app/views/products/p_soldout.html.haml
+++ b/app/views/products/p_soldout.html.haml
@@ -18,8 +18,8 @@
               取引中
             = link_to "#", class: "pmain__center--right2" do
               売却済み
-          -if @products.present? && @products.to_a[0].saler_id == current_user.id && @products.to_a[0].buyer_id.present?
-            - @products.each do |product|
+          -if @user.sold_items.present?
+            - @user.sold_items.each do |product|
               = link_to product_path(product),class:"item_content" do
                 .item_content__image
                   = image_tag product.product_images[0].image.to_s,size:"58x48"
