--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -13,9 +13,9 @@
         .imain__main__link__image#icon
           %ul.imain__main__link__image__ulist
             %li
-              = image_tag "6cbf10cdf0a7a15ce0c0615f66a499bb_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
+              = image_tag "fmarket_logo_red.svg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
             %li
-              = image_tag "0782e7874d8a44fff2875158ba68839e_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
+              = image_tag "fmarket_logo_white.svg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
               .imain__main__link__image__ulist__text
                 .imain__main__link__image__ulist__text__1
                   スマホで簡単
