--- a/app/assets/stylesheets/kaminari.scss
+++ b/app/assets/stylesheets/kaminari.scss
@@ -15,6 +15,13 @@
   font-size: 14px;
   line-height: 42px;
   vertical-align: top;
+  &.current{
+    background-color: #EA352D;
+    color: #fff;
+    &:hover{
+      background-color: #EA352D;
+    }
+  }
   &:hover{
     background-color: #F5F5F5;
   }
@@ -80,12 +87,6 @@
     background-color: #F5F5F5;
   }
 }
-.current{
-  background-color: #EA352D;
-  color: #fff;
-  &:hover{
-    background-color: #EA352D;
-  }
-}
+
 
 
