--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -86,7 +86,7 @@
               margin-left: 60px;
               color: white;
               font-size: 50px;
-              width: 1300px;
+              width: 1200%;
               #right__icon {
                 float: right;
               }
