--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -46,6 +46,7 @@
       font-weight: 400;
       font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
       cursor: pointer;
+      width: 100%;
     }
     &--delete{
       font-size: 14px;
@@ -54,6 +55,7 @@
       display: inline-block;
       padding: 5px 15px;
       cursor: pointer;
+      width: 100%;
     }
   }
 }
