--- a/app/assets/stylesheets/category_search.scss
+++ b/app/assets/stylesheets/category_search.scss
@@ -130,7 +130,7 @@ a{
               margin-left: 60px;
               color: white;
               font-size: 50px;
-              width: 1300px;
+              width: 92%;
               #right__icon {
                 float: right;
               }
