--- a/app/views/products/_banner.html.haml
+++ b/app/views/products/_banner.html.haml
@@ -9,4 +9,4 @@
       = link_to image_tag('https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg',size:"144x40",class:"banner__left__logo--2"), '#'
       = link_to image_tag('https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg',size:"144x40",class:"banner__left__logo--3"), '#'
   .banner__right
-    = image_tag '515366b4a487b01050925315ff07406c_s.jpg',size:"300x260",class:"banner__right--image"
+    = image_tag 'halloween_chara1_pumpkin.png',size:"300x260",class:"banner__right--image"
