--- a/app/views/products/_new_header.html.haml
+++ b/app/views/products/_new_header.html.haml
@@ -6,8 +6,8 @@
       .mheader__main__upper__logo
         .mheader__main__upper__logo__image
           = link_to image_tag("fmarket_logo_red.svg",size:"134x36"),root_path
-      = form_with(url: root_path, local: true,method: :get, class: "mheader__main__upper__search") do |f|
-        = f.text_field :keyword, placeholder: " 何かお探しですか？", class: "mheader__main__upper__search__blank"
+      = form_with(url: search_products_path, local: true,method: :get, class: "mheader__main__upper__search") do |f|
+        = f.text_field :keyword, value: @search_params, placeholder: " 何かお探しですか？", class: "mheader__main__upper__search__blank"
         %button.mheader__main__upper__search__button
           %i.fas.fa-search
     .mheader__main__bottom
@@ -18,7 +18,7 @@
               .icon-text__left カテゴリーから探す
         %ul.mheader__main__bottom__left__category__submenu
           %li
-            = link_to "レディース", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "レディース", "/products/category_search/1", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__ladies
               %li
                 = link_to "トップス", root_path, class:"mheader__main__bottom__left__category__submenu__child__ladies__child"
@@ -307,7 +307,7 @@
                   %li
                     = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__ladies__child__watch__child"
           %li
-            = link_to "メンズ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "メンズ","/products/category_search/2", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__mens
               %li
                 = link_to "トップス", root_path, class:"mheader__main__bottom__left__category__submenu__child__mens__child"
@@ -338,7 +338,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__mens__child"            
           %li
-            = link_to "ベビー•キッズ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "ベビー•キッズ","/products/category_search/3" , class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__baby
               %li
                 = link_to "ベビー服(女の子用)~95cm", root_path, class:"mheader__main__bottom__left__category__submenu__child__baby__child"
@@ -369,7 +369,7 @@
               %li
                 = link_to "行事／記念品", root_path, class:"mheader__main__bottom__left__category__submenu__child__baby__child"              
           %li
-            = link_to "インテリア•住まい•小物", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "インテリア•住まい•小物",  "/products/category_search/4", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__interia
               %li
                 = link_to "キッチン/食器", root_path, class:"mheader__main__bottom__left__category__submenu__child__interia__child" 
@@ -398,7 +398,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__interia__child" 
           %li
-            = link_to "本•音楽•ゲーム", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "本•音楽•ゲーム","/products/category_search/5" , class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__book
               %li
                 = link_to "本", root_path, class:"mheader__main__bottom__left__category__submenu__child__book__child"
@@ -415,7 +415,7 @@
               %li
                 = link_to "テレビゲーム", root_path, class:"mheader__main__bottom__left__category__submenu__child__book__child"
           %li
-            = link_to "おもちゃ•ホビー•グッズ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "おもちゃ•ホビー•グッズ","/products/category_search/6" , class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__toy
               %li
                 = link_to "おもちゃ", root_path, class:"mheader__main__bottom__left__category__submenu__child__toy__child"
@@ -440,7 +440,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__toy__child"
           %li
-            = link_to "コスメ•香水•美容", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "コスメ•香水•美容","/products/category_search/7", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__cos
               %li
                 = link_to "ベースメイク", root_path, class:"mheader__main__bottom__left__category__submenu__child__cos__child"
@@ -465,7 +465,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__cos__child"
           %li
-            = link_to "家電•スマホ•カメラ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "家電•スマホ•カメラ","/products/category_search/8" , class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__appliance
               %li
                 = link_to "スマートフォン/携帯電話", root_path, class:"mheader__main__bottom__left__category__submenu__child__appliance__child"
@@ -488,7 +488,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__appliance__child"
           %li
-            = link_to "スポーツ•レジャー", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "スポーツ•レジャー","/products/category_search/9", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__sports
               %li
                 = link_to "ゴルフ", root_path, class:"mheader__main__bottom__left__category__submenu__child__sports__child"
@@ -515,7 +515,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__sports__child"
           %li
-            = link_to "ハンドメイド", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "ハンドメイド", "/products/category_search/10" , class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__handmade
               %li
                 = link_to "アクセサリー(女性用)", root_path, class:"mheader__main__bottom__left__category__submenu__child__handmade__child"
@@ -536,7 +536,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__handmade__child"              
           %li
-            = link_to "チケット", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "チケット", "/products/category_search/11", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__ticket
               %li
                 = link_to "音楽", root_path, class:"mheader__main__bottom__left__category__submenu__child__ticket__child"
@@ -555,7 +555,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__ticket__child"            
           %li
-            = link_to "自転車•オートバイ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "自転車•オートバイ", "/products/category_search/12", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__bike
               %li
                 = link_to "自転車本体", root_path, class:"mheader__main__bottom__left__category__submenu__child__bike__child"
@@ -572,7 +572,7 @@
               %li
                 = link_to "オートバイアクセサリー", root_path, class:"mheader__main__bottom__left__category__submenu__child__bike__child"
           %li
-            = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "その他","/products/category_search/13", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__other
               %li
                 = link_to "まとめ売り", root_path, class:"mheader__main__bottom__left__category__submenu__child__other__child"
