--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -16,7 +16,7 @@
         .item-num-0#image-box__container
           = f.fields_for :product_images do |i|
             .exhibitcontent_main__first--image
-              = i.file_field :image, type: 'file', name: "product[product_images_attributes][][image]", value:"", style: "display:none", id:"img-file"
+              = i.file_field :image, type: 'file', name: "product[product_images_attributes][0][image]", value:"", style: "display:none", id:"img-file"
               %label{for: "img-file"}
                 %pre
                   ドロッグアンドドロップ
