--- a/app/assets/stylesheets/_products_search.scss
+++ b/app/assets/stylesheets/_products_search.scss
@@ -37,8 +37,39 @@
           object-fit: cover;
         }
         &__sold{
+          height: 60px;
+          width: 60px;
+          position: absolute;
+          display: inline-block;
+          margin: 0;
+          vertical-align: top;
+          left: 0;
+          top: 0;
           &__text{
+            font-size: 14px;
+            left: 3px;
+            top: 14px;
+            color: #fff;
+            font-weight: 600;
+            position: absolute;
+            transform: rotate(-45deg);
+            z-index: 2;
+
           }
+            &:after{
+              border-color: #ff0211 transparent transparent;
+              border-width: 60px 60px 0 0;
+              border-style: solid;
+              z-index: 1;
+              position: absolute;
+              display: block;
+              width: 0;
+              height: 0;
+              top: 0px;
+              left:0px;
+              content: "";
+              
+            }
         }
       }
       &__name{
