--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,5 +42,13 @@
 @import "search";
 @import "category_search";
 @import "products_search";
-@import "kaminari"
+@import "kaminari";
+@import "./merupay";
+@import "./merupay1";
+@import "./merupay_sellpast";
+@import "./merupay_selldeadline";
+@import "./merupay_transfer";
+@import "./merupay_transferpast";
+@import "./merupay1_expiration_date";
+@import "./merupay_receive_cash";
 
