--- a/app/views/products/merupay_transferpast.html.haml
+++ b/app/views/products/merupay_transferpast.html.haml
@@ -1,14 +1,26 @@
 -# 売上・振込申請の振込申請履歴一覧のページです
 
-.merupay1
-  .merupay1__title
-    振込申請履歴一覧
-  .merupay1__bottom
-    = image_tag "logo_gray.svg", class: "merupay1__bottom--img", size: "100x100"
-    .merupay1__bottom--text
-      振込申請履歴はありません
-  .foot
-    = link_to "", class: "foot__left" do
-      = icon('fas', 'angle-left', class: 'foot__left----text')
-    = link_to "", class: "foot__right" do
-      = icon('fas', 'angle-right', class: 'foot__right--icon')
+= render 'header'  # 全体のヘッダーの部分テンプレートの呼び出し
+.u-main
+  - breadcrumb :user_page
+  = render "layouts/breadcrumbs"
+  .u-container
+    .container-center
+      = render 'user_sidebar'  # ユーザマイページのサイドバーの部分テンプレートの呼び出し
+      .merupay1
+        .merupay1__title
+          振込申請履歴一覧
+        .merupay1__bottom
+          = image_tag "logo_gray.svg", class: "merupay1__bottom--img", size: "100x100"
+          .merupay1__bottom--text
+            振込申請履歴はありません
+        .foot
+          = link_to "", class: "foot__left" do
+            = icon('fas', 'angle-left', class: 'foot__left----text')
+          = link_to "", class: "foot__right" do
+            = icon('fas', 'angle-right', class: 'foot__right--icon')
+= render 'banner'  # 全体のバナーの部分テンプレートの呼び出し
+
+= render 'footer'  # 全体のフッターの部分テンプレートの呼び出し
+
+= render 'camera_icon'  # 右下に出るカメラアイコンの部分テンプレートの呼び出し
